--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <button class="numberBox">Click me</button>
+  <p>This is an etch-a-sketch game developed as part of The Odin Project's Foundations course. Click the above button and enter a number to generate a square grid with your selected number of rows/columns. Then draw!</p>
 
     <div class="box-grid">
     
